@@ -26,11 +26,12 @@
        shouldBeTrue("event.elapsedTime > 0");
        shouldBeTrue("speechSynthesis.speaking");
     }
-    u.onend = function(event) {
+
+    u.addEventListener('end', function(e) { 
        shouldBeTrue("event.elapsedTime > 0");
        shouldBeFalse("speechSynthesis.speaking");
        finishJSTest();
-    }
+    });
 
     shouldBeFalse("speechSynthesis.speaking");
     speechSynthesis.speak(u);
