@@ -1,3 +1,12 @@
+2014-04-29  Chris Fleizach  <cfleizach@apple.com>
+
+        AX: SpeechSynthesisUtterance cannot addEventListener
+        https://bugs.webkit.org/show_bug.cgi?id=132321
+
+        Reviewed by Mario Sanchez Prada.
+
+        * platform/mac/fast/speechsynthesis/speech-synthesis-speak.html:
+
 2014-04-29  Hans Muller  <hmuller@adobe.com>
 
         [CSS Shapes] shape-outside polygon fails when first vertex is 0,0
